Update working on section
Signed-off-by: Anastassios Nanos <ananos@nubificus.co.uk>

--- a/_posts/2021-05-22-hwaccel.md
+++ b/_posts/2021-05-22-hwaccel.md
@@ -8,3 +8,19 @@ title: "Hardware Acceleration"
 Accelerating parts of an application can really boost performance. But is it
 something we can easily do without being too intrusive to the application code?
 Can we do that in the cloud? I'm working on getting (some of) these answers.
+
+We are building <a href="https://vaccel.org">vAccel</a>, a framework that
+abstracts hardware implementations of operations to functions. 
+
+vAccel offers more predictable execution time than device passthrough, as all
+the complicated software execution is pushed to the Host/Hypervisor. vAccel
+ensures interoperability as it is hardware/vendor-agnostic by providing a
+simple interface to add any acceleration framework.
+
+More information about vAccel is available at <a
+href="https://docs.vaccel.org">https://docs.vaccel.org</a>. Additionally,
+aspects of the vAccel framework are presented at the following FOSDEM 2021
+talks:
+ * <a href="https://fosdem.org/2021/schedule/event/vai_ml_lightweight_vmms/">ML inference acceleration for lightweight VMMs</a>
+ * <a href="https://fosdem.org/2021/schedule/event/microkernel_hardware_acceleration_for_unikernels/">Hardware acceleration for unikernels</a>
+ * <a href="https://fosdem.org/2021/schedule/event/containers_ml_kata/">ML inference acceleration on K8s using kata containers & AWS Firecracker</a>
