Update short-bio layout
Signed-off-by: Anastassios Nanos <ananos@nubificus.co.uk>

--- a/_posts/2006-11-01-dipleng.md
+++ b/_posts/2006-11-01-dipleng.md
@@ -11,4 +11,4 @@ to Myrinet networks bypassing the memory hierarchy.<br/>The objective of this
 study is the design and implementation of a framework that transfers data
 from local storage devices to Myrinet networks, bypassing the memory
 hierarchy of the system. Data flow from the storage device to the network,
-without the touching the host's memory subsystem.
+without touching the host's memory subsystem.
