--- a/_posts/2007-04-01-cslab.md
+++ b/_posts/2007-04-01-cslab.md
@@ -4,6 +4,7 @@ tags: [fiction]
 bio: true
 title: "Junior Researcher"
 company: CSLab, ECE, NTUA
+date_end: 2013-12-01
 ---
 
 For the purpose of my PhD thesis, I worked on scalable block-level storage
