--- a/_posts/2011-01-01-unweb.md
+++ b/_posts/2011-01-01-unweb.md
@@ -4,6 +4,7 @@ tags: [fiction]
 bio: true
 title: "Systems Engineer"
 company: Unweb
+date_end: 2013-07-01
 ---
 
 Served as a systems engineer, deploying, administering and maintaining the
