--- a/_posts/2013-07-01-mistio.md
+++ b/_posts/2013-07-01-mistio.md
@@ -4,6 +4,7 @@ tags: [fiction]
 bio: true
 title: "Co-founder & Systems Engineer"
 company: Mist.io Inc
+date_end: 2015-01-01
 ---
 
 Design, develop, deploy and maintain the company's product. Mist.io is about
