--- a/_posts/2014-05-01-cslab.md
+++ b/_posts/2014-05-01-cslab.md
@@ -4,6 +4,7 @@ tags: [fiction]
 bio: true
 title: "Postdoctoral Research Fellow"
 company: CSLab, ECE, NTUA
+date_end: 2015-01-01
 ---
 
 Worked on I/O Virtualization, systems software for high-performance I/O in
