--- a/_posts/2015-02-01-onapp.md
+++ b/_posts/2015-02-01-onapp.md
@@ -4,6 +4,7 @@ tags: [fiction]
 bio: true
 title: "Researcher / Systems Engineer"
 company: OnApp LTD
+date_end: 2018-06-01
 ---
 
 Conducting research in emerging, power-efficient micro-server architectures
