--- a/_posts/2005-10-01-cc.md
+++ b/_posts/2005-10-01-cc.md
@@ -4,6 +4,7 @@ tags: [fiction]
 bio: true
 title: "Senior Unix/Linux Administrator"
 company: CC, ECE, NTUA
+date_end: 2011-09-01
 ---
 
 Set up the entire lab (25-30 workstations, 5 servers), migrated from
