--- a/_posts/2011-09-01-maxeler.md
+++ b/_posts/2011-09-01-maxeler.md
@@ -4,6 +4,7 @@ tags: [fiction]
 bio: true
 title: "Intern"
 company: Maxeler Technologies LTD
+date_end: 2012-03-01
 ---
 
 Worked on porting the company's custom FPGA boards to virtualized
