Update formatting, display content in front page
Signed-off-by: Anastassios Nanos <ananos@nubificus.co.uk>

--- a/_posts/2020-04-01-nbfc.md
+++ b/_posts/2020-04-01-nbfc.md
@@ -4,6 +4,7 @@ tags: [fiction]
 bio: true
 title: "Director & Systems Architect"
 company: Nubificus LTD
+date_end: present
 ---
 
 Nubificus Ltd is a software consultancy tackling complex virtualization
