--- a/_posts/2021-05-22-hwaccel.md
+++ b/_posts/2021-05-22-hwaccel.md
@@ -3,6 +3,7 @@ layout: work_item
 tags: [fiction]
 work: true
 title: "Hardware Acceleration"
+icon: fa-arrow-up
 ---
 
 Accelerating parts of an application can really boost performance. But is it
