Update company logos, fix colors
Signed-off-by: Anastassios Nanos <ananos@nubificus.co.uk>

--- a/_posts/2005-10-01-cc.md
+++ b/_posts/2005-10-01-cc.md
@@ -5,6 +5,7 @@ bio: true
 title: "Senior Unix/Linux Administrator"
 company: CC, ECE, NTUA
 date_end: 2011-09-01
+image: ntua.jpg
 ---
 
 Set up the entire lab (25-30 workstations, 5 servers), migrated from
