--- a/_posts/2006-11-01-dipleng.md
+++ b/_posts/2006-11-01-dipleng.md
@@ -4,6 +4,7 @@ tags: [fiction]
 bio: true
 title: "Dipl. Eng."
 company: ECE, NTUA
+image: ntua.jpg
 ---
 
 Design and impementation of a mechanism transfering data from storage devices
