--- a/_posts/2011-01-01-unweb.md
+++ b/_posts/2011-01-01-unweb.md
@@ -5,6 +5,7 @@ bio: true
 title: "Systems Engineer"
 company: Unweb
 date_end: 2013-07-01
+image: unweb.jpg
 ---
 
 Served as a systems engineer, deploying, administering and maintaining the
