--- a/_posts/2011-09-01-maxeler.md
+++ b/_posts/2011-09-01-maxeler.md
@@ -5,6 +5,7 @@ bio: true
 title: "Intern"
 company: Maxeler Technologies LTD
 date_end: 2012-03-01
+image: maxeler.jpg
 ---
 
 Worked on porting the company's custom FPGA boards to virtualized
