--- a/_posts/2013-07-01-mistio.md
+++ b/_posts/2013-07-01-mistio.md
@@ -5,6 +5,7 @@ bio: true
 title: "Co-founder & Systems Engineer"
 company: Mist.io Inc
 date_end: 2015-01-01
+image: mistio.jpg
 ---
 
 Design, develop, deploy and maintain the company's product. Mist.io is about
