--- a/_posts/2013-12-01-phd.md
+++ b/_posts/2013-12-01-phd.md
@@ -3,7 +3,8 @@ layout: bio_item
 tags: [fiction]
 bio: true
 title: "PhD in Computer Engineering"
-company: CSLab, ECE, NTUA
+company: NTUA
+image: ntua.jpg
 ---
 
 Efficient I/O Device Sharing in Virtualized Environments.<br/>As HPC applications scale to a large number of VMs, providing near-native network I/O performance to each peer VM is an important challenge. In this work, we present Xen2MX, a paravirtual interconnection framework, based on the Open-MX protocol, a port of the Myrinet/MX over generic Ethernet adapters. Experimental evaluation of our prototype implementation shows that Xen2MX is able to achieve nearly the same aw performance as Open-MX running in a non-virtualized environment.
