--- a/_posts/2014-05-01-cslab.md
+++ b/_posts/2014-05-01-cslab.md
@@ -5,6 +5,7 @@ bio: true
 title: "Postdoctoral Research Fellow"
 company: CSLab, ECE, NTUA
 date_end: 2015-01-01
+image: cslab.png
 ---
 
 Worked on I/O Virtualization, systems software for high-performance I/O in
