--- a/_posts/2020-04-01-nbfc.md
+++ b/_posts/2020-04-01-nbfc.md
@@ -5,6 +5,7 @@ bio: true
 title: "Director & Systems Architect"
 company: Nubificus LTD
 date_end: present
+image: nbfc.png
 ---
 
 Nubificus Ltd is a software consultancy tackling complex virtualization
