--- a/_posts/2020-05-01-mellanox.md
+++ b/_posts/2020-05-01-mellanox.md
@@ -5,6 +5,7 @@ bio: true
 title: "Software / Systems Engineer"
 company: Mellanox Technologies LTD
 date_end: "2020-07-01"
+image: mlnx.png
 ---
 
 Design and develop a TMfifo virtual device to passthrough a physical QRNG
