--- a/_posts/2020-09-01-up2metric.md
+++ b/_posts/2020-09-01-up2metric.md
@@ -5,6 +5,7 @@ bio: true
 title: "Cloud consultant"
 company: Up2Metric S.A.
 date_end: "2021-08-01"
+image: u2m.jpg
 ---
 
 Container and Cloud consulting solutions for ML acceleration and orchestration.
