--- a/_posts/2015-02-01-onapp.md
+++ b/_posts/2015-02-01-onapp.md
@@ -5,6 +5,7 @@ bio: true
 title: "Researcher / Systems Engineer"
 company: OnApp LTD
 date_end: 2018-06-01
+image: onapp.png
 ---
 
 Conducting research in emerging, power-efficient micro-server architectures
