--- a/_posts/2018-07-01-sunlight.md
+++ b/_posts/2018-07-01-sunlight.md
@@ -5,6 +5,7 @@ bio: true
 title: "Researcher / Systems Engineer"
 company: Sunlight.io LTD
 date_end: "2020-04-09"
+image: sunlight.jpg
 ---
 
 Architecting, implementing, and optimizing a state-of-the-art hyperconverged hypervisor stack that achieves extreme storage and network performance.
